Agregar archivos HTML y CSS para las secciones 1, 2 y 3 del proyecto

--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Primer Enlace
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>El Matemático</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    
+    <h1>Esfuerzo y Constancia</h1>
+    <p>dos valores que se deben tener en cuenta para lograr el éxito</p>
+    <p>tras muchos intentos finalmente..</p>
+    <p>8x − 5x + 3 = 7</p>
+    <div>
+        <a href="Number 1/index.html">Avanzar</a>
+
+        <a href="Number 2/index.html">Delegar</a>
+
+        <a href="Number 3/index.html">Abandonar</a>
+    </div>
+  
+  
+</body>
+</html>
